update rust for 2024

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Update
+      run: rustup update
     - name: Build
       run: cargo build
     - name: Run tests
