chore: fix changelog generation

--- a/release.toml
+++ b/release.toml
@@ -1,1 +1,1 @@
-pre-release-hook = ["sh", "-c", "git cliff --tag {{version}} && git add CHANGELOG.md"]
+pre-release-hook = ["sh", "-c", "git cliff --tag {{version}} -o CHANGELOG.md && git add CHANGELOG.md"]
