--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ categories = ["parsing"]
 [dependencies]
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
+thiserror = "2.0"
